[tool.poetry]
name = "webdeck"
version = "1.8.6"
description = "The free stream deck alternative"
authors = ["Michael Ketchel <mdk@rgnets.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gevent = "^24.2.1"
keyboard = "0.13.5"
flask = "^3.0.3"
flask-socketio = "^5.3.7"
flask-minify = "^0.48"
pyautogui = "0.9.53"
pycaw = "^20240210"
pillow = "^10.4.0"
pyaudio = "^0.2.14"
webcolors = "1.12"
deep-translator = "^1.11.4"
mss = "^9.0.2"
pyperclip = "^1.9.0"
colormath = "3.0.0"
pywinrm = "^0.5.0"
cputil = "^1.2"
gputil = "^1.4.0"
pynvml = "^11.5.3"
spotipy = "^2.24.0"
simple-websocket = "^1.0.0"
deepdiff = "^8.0.1"
pystray = "^0.19.5"
tk = "^0.1.0"
easygui = "^0.98.3"
qrcode = "^7.4.2"
pywebview = "^5.2"
cx-freeze = "^7.2.2"
python-vlc = "^3.0.20123"
obs-websocket-py = "^1.0"
pydub = "^0.25.1"
pywin32; platform_system == "Windows"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
